crates/pcb-star/tests/snapshots/test__nested_components.snap
---
source: projects/cli/crates/diode_star/tests/test.rs
expression: netlist
---
(export (version "E")
  (design
    (source "unknown")
    (date "")
    (tool "pcb"))
  (components
    (comp (ref "U1")
      (value "?")
      (footprint "SMD:0805")
      (libsource (lib "lib") (part "?") (description "unknown"))
      (sheetpath (names "MyModule.MyComponent.Component") (tstamps "88868ff1-5bd1-55c8-8857-a9182b7af4bf"))
      (tstamps "88868ff1-5bd1-55c8-8857-a9182b7af4bf")
      (property (name "Reference") (value "U1"))
      (property (name "symbol_path") (value "None"))
    )
  )
  (libparts
    (libpart (lib "lib") (part "?")
      (description "")
      (docs "~")
      (footprints
        (fp "*"))
      (pins
        (pin (num "1") (name "P1") (type "stereo"))
        (pin (num "2") (name "P2") (type "stereo"))
      )
    )
  )
  (nets
    (net (code "1") (name "P1")
      (node (ref "U1") (pin "1") (pintype "stereo"))
    )
    (net (code "2") (name "P2")
      (node (ref "U1") (pin "2") (pintype "stereo"))
    )
  )
)
