crates/pcb-star/tests/snapshots/test__snapshot_unused_inputs_should_error.snap
---
source: projects/cli/crates/diode_star/tests/test.rs
expression: netlist
---
(export (version "E")
  (design
    (source "unknown")
    (date "")
    (tool "pcb"))
  (components
  )
  (libparts
  )
  (nets
  )
)
Error: [TEMP_DIR]top.star:4:1-7:2 Unknown argument(s) provided to module my_module: unused
